manifests/mock-node-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mock-api
  name: mock-api
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mock-api
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: mock-api
    spec:
      containers:
      - image: jasoria/mock-node-api:v1
        imagePullPolicy: Always
        name: mock-api
        ports:
        - containerPort: 8080
          name: api
          protocol: TCP
        securityContext:
          allowPrivilegeEscalation: false
          capabilities: {}
          privileged: false
          readOnlyRootFilesystem: false
          runAsNonRoot: false
      dnsPolicy: ClusterFirst
      restartPolicy: Always
