manifests/mock-node-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mock-api
  name: mock-api
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: mock-api
  sessionAffinity: None
  type: ClusterIP
